[package]
name = "bevy_dirworld"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-channel = "2.3.1"
notify = "6.1.1"
tar = "0.4.41"
xz2 = "0.1.7"
rust-crypto = "0.2.36"
multi_key_map = "0.3.0"
serde = "1.0"
rmp-serde = "1.3.0"
anymap = "0.12"
strum = "0.26"
notify-debouncer-full = "0.3"
md5 = "0.7"
bevy-async-ecs = "0.6"
aes = "0.8"
hex = "0.4"
hex-literal = "0.4"

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["serialize"]

[dependencies.avian3d]
version = "0.1"
features = ["serialize"]

[dependencies.occule]
git = "http://github.com/exvacuum/occule"

[dependencies.yarnspinner]
version = "0.3"
optional = true
features = ["serde"]

[dependencies.bevy_scriptum]
version = "0.6"
features = ["lua"]

[features]
default = ["yarnspinner"]
yarnspinner = ["dep:yarnspinner"]
