[package]
name = "bevy_dirworld"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
notify = "7.0"
tar = "0.4"
xz2 = "0.1"
rust-crypto = "0.2"
multi_key_map = "0.3"
serde = "1.0"
rmp-serde = "1.3"
anymap = "0.12"
notify-debouncer-full = "0.4"
md5 = "0.7"
bevy-async-ecs = "0.6"
aes = "0.8"
hex = "0.4"
hex-literal = "0.4"
uuid = "1.11"
lazy_static = "1.5"

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["serialize", "multi_threaded"]

[dependencies.avian3d]
version = "0.1"
features = ["serialize"]

[dependencies.occule]
git = "http://github.com/exvacuum/occule"
branch = "wip"

[dependencies.yarnspinner]
git = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
optional = true
features = ["serde"]

[dependencies.bevy_scriptum]
version = "0.6"
features = ["lua"]

[dependencies.bevy_basic_interaction]
git = "https://github.com/exvacuum/bevy_basic_interaction.git"
branch = "wip"

[dependencies.strum]
version = "0.26"
features = ["derive"]

[features]
default = ["yarnspinner"]
yarnspinner = ["dep:yarnspinner"]
