[package]
name = "bevy_dirworld"
version = "0.4.0"
edition = "2021"

[dependencies]
async-channel = "2.3"
notify = "7.0"
tar = "0.4"
xz2 = "0.1"
rust-crypto = "0.2"
multi_key_map = "0.3"
serde = "1.0"
rmp-serde = "1.3"
notify-debouncer-full = "0.4"
md5 = "0.7"
aes = "0.8"
hex = "0.4"
hex-literal = "0.4"
uuid = "1.11"
lazy_static = "1.5"

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["serialize", "multi_threaded", "bevy_state"]

[dependencies.avian3d]
version = "0.2"
features = ["serialize"]

[dependencies.occule]
git = "https://git.exvacuum.dev/occule"
tag = "v0.3.1"

[dependencies.yarnspinner]
git = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
optional = true
features = ["serde"]

[dependencies.bevy_mod_scripting]
version = "0.8"
features = ["lua54", "lua_script_api"]

[dependencies.bevy_basic_interaction]
git = "https://git.exvacuum.dev/bevy_basic_interaction"
tag = "v0.2.0"

[dependencies.strum]
version = "0.26"
features = ["derive"]

[features]
default = ["yarnspinner"]
yarnspinner = ["dep:yarnspinner"]
